.k8s/users-api/users-api.deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: users
      component: api
  template:
    metadata:
      labels:
        app: users
        component: api
    spec:
      containers:
        - image: k8s_media_lake_users_api:latest
          imagePullPolicy: Never
          name: users-api
          ports:
            - containerPort: 8200
          resources:
            limits:
              memory: 1024Mi
              cpu: "0.2"
            requests:
              memory: 256Mi
              cpu: "0.2"
