.k8s/users-api/users-api.postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
      component: postgres
  template:
    metadata:
      labels:
        app: users
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb 
          resources:
            limits:
              memory: 256Mi
              cpu: "0.2"
            requests:
              memory: 256Mi
              cpu: "0.2"
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: users-api-postgres-volume
---
apiVersion: v1
kind: Service
metadata:
  name: users-api-postgres-service
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: users
    component: postgres
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: users-api-postgres-virtual-service
spec:
  hosts:
    - users-api-postgres-service
  http:
    - route:
        - destination:
            host: users-api-postgres-service
